--- a/Springmvc_qn/.project
+++ b/Springmvc_qn/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Springmvc_qn</name>
+	<name>Springmvc_qn8</name>
 	<comment></comment>
 	<projects>
 	</projects>
