--- a/Springrest_qn2/pom.xml
+++ b/Springrest_qn2/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>bharteshAssg2</groupId>
+	<groupId>Springrest_qn2</groupId>
 	<artifactId>restAssg2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>restAssg2</name>
